# gscore_cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/gscore_cli/: gscore.py
